Fix h1 to span full width: add flex:1 to h1, remove flex-wrap:nowrap

--- a/www/skin/scss/section.scss
+++ b/www/skin/scss/section.scss
@@ -26,13 +26,12 @@
     .header {
         display: flex;
         align-items: center;
-        flex-wrap: nowrap;
 
         h1 {
             cursor: pointer;
             user-select: none;
-            white-space: nowrap;
             margin: 0;
+            flex: 1;
         }
     }
 }
